--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -437,12 +437,12 @@ body.dark-theme {
 
 .logos__img img {
   height: 60px;
-  opacity: 0.2;
+  opacity: 0.423678;
   transition: 0.3s;
 }
 
 .logos__img img:hover {
-  opacity: 0.6;
+  opacity: 0.8;
 }
 
 /*=============== POPULAR ===============*/
@@ -934,7 +934,7 @@ body.dark-theme {
   }
 
   .popular__card {
-    width: 230px;
+    width: 230px !important;
     padding: .5rem .5rem .75rem;
   }
 
@@ -1128,7 +1128,7 @@ body.dark-theme {
   }
 
   .popular__card {
-    width: 320px;
+    width: 320px !important;
     padding: .75rem .75rem 2rem;
   }
 
@@ -1242,6 +1242,7 @@ body.dark-theme {
   .home__container {
     column-gap: 4rem;
   }
+
 }
 
 /* For 2K & 4K resolutions */
